# ProjectConfigX

./: .gitignore  pyproject.toml
configx/qlang/: __init__.py  configxql.lark  interpreter.py  parser.py
configx/runtime/: configx.py
examples/: 01.py  02.py  03.py  04.py  README.md
tests/: test_configxql.py
